--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
-<h1>Burgers!</h1>
+<h1>Tacos!</h1>
 
-<h2>burger that are not devoured!</h2>
+<h2>Tacos that are not devoured!</h2>
 
 <ul>
     {{#each burger}}
@@ -36,15 +36,13 @@
     {{/each}}
 </ul>
 
-<h2>Add a burger</h2>
+<h2>Add a taco:</h2>
 <div class="create-form">
 
     <div class="form-group">
-        <label for="ca">Burger Name:</label>
+        <label for="ca">Taco Name:</label>
         <input type="text" id="burger" name="name">
     </div>
 
-    
-
-    <button id="add-burger" type="button">Add burger</button>
+    <button id="add-burger" type="button">Add Taco</button>
 </div>
