--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,14 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+		<link rel="stylesheet" href="/public/assets/img/Hamburger.jpg" />
 		<title>Eat-Da-Burger!</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
 		
 	</head>
 	<body>
+		<img src="/public/assets/img/taco.png" />
 		{{{ body }}}
 
-<script src="/assets/js/burger.js"></script>
+<script src="/assets/js/app.js"></script>
         
 	</body>
     
