--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,48 +1,66 @@
-<h1>Tacos!</h1>
-
-<h2>Tacos that are not devoured!</h2>
-
-<ul>
-    {{#each burger}}
-    {{#unless devoured}}
-    <li>
-        {{burger_name}}
-
-        <button class="change-devour" data-id="{{id}}" data-newdevour="{{devoured}}">
-            {{#if devoured}}DEVOURED!{{else}}NOT DEVOURED!{{/if}}
-        </button>
 
 
-    </li>
-    {{/unless}}
-    {{/each}}
-</ul>
-
-<h2>Burgers to be devoured!</h2>
-
-<ul>
-    {{#each burger}}
-    {{#if devoured}}
-    <li>
-        {{burger_name}}
-
-        <button class="change-devoured" data-id="{{id}}" data-newdevour="{{devoured}}">
-            {{#if devoured}}DEVOURED!{{else}} NOT DEVOURED!{{/if}}
-        </button>
-
-
-    </li>
-    {{/if}}
-    {{/each}}
-</ul>
-
-<h2>Add a taco:</h2>
-<div class="create-form">
-
-    <div class="form-group">
-        <label for="ca">Taco Name:</label>
-        <input type="text" id="burger" name="name">
+<nav class="navbar bg-light">
+    <img src="assets/img/taco.png" height="80" class="d-inline-block align-top mx-auto" alt="">
+</nav>
+<div class="container my-5">
+    <div class="row">
+        <div class="col">
+            <div class="card">
+                <div class="card-header text-center">
+                    <h4>New Tacos</h4>
+                </div>
+                    <div class="row">
+                        {{#each burger_data}}
+                            {{#unless this.devoured}}
+                            <div class="card-body">
+                                <div class="row">
+                                <div class="col-md-9">
+                                
+                                    <pre>{{this.id}}. {{this.burger_name}}</pre>
+                                </div>
+                                <div class="col-md-3">
+                                    <form class="devour-form button-size">
+                                        <input type="hidden" class="burger_id" type="text" value={{this.id}}>
+                                        <button type="submit" class="btn btn-sm btn-outline-danger m-1 devour-btn float-right">Devour it!<i class="fas fa-utensils ml-2"></i></button>
+                                        </input>
+                                
+                                    </form>
+                                </div>
+                                </div>
+                            </div>
+                        {{/unless}}
+                        {{/each}}
+                    </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <div class="card-header text-center">
+                    <h4>Devoured</h4>
+                </div>
+                <div class="card-body">
+                    <div class="col-xs-6 text-center" class="task">
+                        {{#each burger_data}}
+                        {{#if this.devoured}}
+                        <input class="form-control" type="text" placeholder="{{this.id}} . {{this.burger_name}}" >
+                        {{/if}}
+                        {{/each}}
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-
-    <button id="add-burger" type="button">Add Taco</button>
+    <div class="row mt-5">
+        <div class="col-md-6 offset-md-3">
+            <div class="col-xs-12 text-center enter_section">
+                <form action="/burgers/create" method="POST">
+                    <input type="text" class="form-control" name="burger_name" value="" id="enter_text">
+                    <button type="submit" class="btn btn-primary" id="text-enter-button">Submit</button>
+                    </input>
+                </form>
+                <p>Enter a taco you want to eat.</p>
+            </div>
+        </div>
+    </div>
 </div>
